Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjNumObjWrapped.quorum
class main
    action main
        Number num
        num:setValue(7.5)
        Integer i = num
    end
end